src/objects/Im_InvolvedParty__c.object
<CustomObject>
    <description>The individuals involved with the event/incident.</description>
    <fields>
        <fullName>Im_Incident__c</fullName>
        <label>Im_Incident</label>
        <referenceTo>Im_Incident__c</referenceTo>
        <relationshipLabel>Im_InvolvedParties</relationshipLabel>
        <relationshipName>Im_InvolvedParties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Length_Of_Service__c</fullName>
        <formula>IF(ISPICKVAL( Type__c , &apos;Person Being Served&apos;), CASE(  1,
IF( (YEAR(DATEVALUE(Im_Incident__r.Date_Documented__c))- Year(Person_Being_Served_Involved__r.Start_Date__c)) ==1,1,100),&quot;1 Year&quot;,
IF( (YEAR(DATEVALUE(Im_Incident__r.Date_Documented__c))- Year(Person_Being_Served_Involved__r.Start_Date__c)) &gt; 1,1,200), TEXT(FLOOR(((DATEVALUE(Im_Incident__r.Date_Documented__c)) - (Person_Being_Served_Involved__r.Start_Date__c)+1)/365.2425)) + &quot; Years&quot; ,
IF(YEAR(DATEVALUE(Im_Incident__r.Date_Documented__c)) -Year(Person_Being_Served_Involved__r.Start_Date__c)==0 &amp;&amp; DAY(Person_Being_Served_Involved__r.Start_Date__c) - DAY(DATEVALUE(Im_Incident__r.Date_Documented__c))&lt;=0 &amp;&amp; MONTH(DATEVALUE(Im_Incident__r.Date_Documented__c)) - MONTH(Person_Being_Served_Involved__r.Start_Date__c)==1 ,1,300 ) , &quot;1 Month&quot;,

IF(YEAR(DATEVALUE(Im_Incident__r.Date_Documented__c)) -Year(Person_Being_Served_Involved__r.Start_Date__c)==0 &amp;&amp; MONTH(DATEVALUE(Im_Incident__r.Date_Documented__c)) - MONTH(Person_Being_Served_Involved__r.Start_Date__c)&gt;1,1,400), TEXT(MONTH(DATEVALUE(Im_Incident__r.Date_Documented__c)) - MONTH(Person_Being_Served_Involved__r.Start_Date__c)) +&quot; Months&quot;,
IF( (YEAR(DATEVALUE(Im_Incident__r.Date_Documented__c)) -Year(Person_Being_Served_Involved__r.Start_Date__c)==0) &amp;&amp; (MONTH(DATEVALUE(Im_Incident__r.Date_Documented__c)) - MONTH(Person_Being_Served_Involved__r.Start_Date__c)==0 || MONTH(DATEVALUE(Im_Incident__r.Date_Documented__c)) - MONTH(Person_Being_Served_Involved__r.Start_Date__c)==1) &amp;&amp; (DAY(DATEVALUE(Im_Incident__r.Date_Documented__c) -DAY(Person_Being_Served_Involved__r.Start_Date__c) )==1),1,500), &quot;1 Day&quot;,

IF( (YEAR(DATEVALUE(Im_Incident__r.Date_Documented__c)) -Year(Person_Being_Served_Involved__r.Start_Date__c)==0) &amp;&amp; (MONTH(DATEVALUE(Im_Incident__r.Date_Documented__c)) - MONTH(Person_Being_Served_Involved__r.Start_Date__c)==0 || MONTH(DATEVALUE(Im_Incident__r.Date_Documented__c)) - MONTH(Person_Being_Served_Involved__r.Start_Date__c)==1) &amp;&amp; (DAY(DATEVALUE(Im_Incident__r.Date_Documented__c) -DAY(Person_Being_Served_Involved__r.Start_Date__c) )&gt;1),1,600), TEXT( DAY(DATEVALUE(Im_Incident__r.Date_Documented__c) -DAY(Person_Being_Served_Involved__r.Start_Date__c) ))+&quot; Days&quot;,
&quot;0&quot;
), &quot;&quot;)</formula>
        <label>Length Of Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBS_Age__c</fullName>
        <formula>IF(ISPICKVAL( Type__c , &apos;Person Being Served&apos;), FLOOR(( DATEVALUE(Im_Incident__r.Date_Documented__c) -  Person_Being_Served_Involved__r.Admission__r.Person_Being_Served__r.Birthdate +1)/365.2425), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PBS Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBS_Population_Type__c</fullName>
        <formula>IF(PBS_Age__c&gt;=18, &quot;Adult&quot;, &quot;Child&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PBS Population Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Being_Served_Involved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Served Involved</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Im_InvolvedParties</relationshipLabel>
        <relationshipName>Im_InvolvedParties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Involved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Involved</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Im_InvolvedParties</relationshipLabel>
        <relationshipName>Im_InvolvedParties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Person Being Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Home Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Family Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Im_InvolvedParty</label>
    <nameField>
        <label>Individual Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Im_InvolvedParties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>